--- a/app/src/main/res/values/strings_untranslated.xml
+++ b/app/src/main/res/values/strings_untranslated.xml
@@ -98,11 +98,7 @@
     <string name="details_row_title_manage_tokens" translatable="false">Manage tokens</string>
 
     <string name="add_tokens_subtitle_blockchains" translatable="false">Blockchains</string>
-    <string name="add_tokens_subtitle_ethereum_tokens" translatable="false">Ethereum tokens</string>
-    <string name="add_tokens_subtitle_bsc_tokens" translatable="false">Binance Smart Chain tokens</string>
-    <string name="add_tokens_subtitle_binance_tokens" translatable="false">Binance Chain tokens</string>
-    <string name="add_tokens_subtitle_avalanche_tokens" translatable="false">Avalanche C-Chain tokens</string>
-    <string name="add_tokens_subtitle_polygon_tokens" translatable="false">Polygon tokens</string>
+    <string name="add_tokens_subtitle_format" translatable="false">%s tokens</string>
     <string name="wallet_address_button_copy" translatable="false">Copy</string>
     <string name="wallet_address_button_share" translatable="false">Share</string>
     <string name="wallet_button_add_tokens" translatable="false">+ Add tokens</string>
