--- a/app/src/main/res/layout/item_currency_wallet.xml
+++ b/app/src/main/res/layout/item_currency_wallet.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:minHeight="76dp">
 
-            <ImageView
+            <androidx.constraintlayout.utils.widget.ImageFilterView
                 android:id="@+id/iv_currency"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
