--- a/app/src/main/res/layout/fragment_onboarding_main.xml
+++ b/app/src/main/res/layout/fragment_onboarding_main.xml
@@ -33,8 +33,9 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <FrameLayout
+        <include
             android:id="@+id/onboarding_top_container"
+            layout="@layout/layout_onboarding_container_top"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.2"
@@ -50,6 +51,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <include
+        android:id="@+id/v_confetti"
         layout="@layout/view_confetti"
         android:visibility="gone" />
 
