--- a/app/src/main/res/layout/layout_balance_wallet_details.xml
+++ b/app/src/main/res/layout/layout_balance_wallet_details.xml
@@ -64,70 +64,41 @@
         tools:text="J" />
 
     <TextView
-        android:id="@+id/tv_status_verified"
+        android:id="@+id/tv_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
         android:paddingStart="16dp"
         android:paddingTop="4dp"
         android:paddingEnd="16dp"
-        android:text="@string/wallet_balance_verified"
-        android:textColor="@color/accent"
         android:textSize="14sp"
-        android:visibility="gone"
-        app:drawableStartCompat="@drawable/ic_ok"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_fiat_amount" />
+        app:layout_constraintTop_toBottomOf="@id/tv_fiat_amount"
+        tools:text="@string/wallet_balance_verified" />
 
     <TextView
-        android:id="@+id/tv_status_error"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_error"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
+        android:ellipsize="end"
+        android:maxLines="6"
         android:paddingStart="16dp"
-        android:paddingTop="4dp"
+        android:paddingTop="16dp"
         android:paddingEnd="16dp"
-        android:text="@string/wallet_balance_blockchain_unreachable"
-        android:textColor="@color/warning"
         android:textSize="14sp"
-        android:visibility="gone"
-        app:drawableStartCompat="@drawable/ic_warning_small"
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/iv_currency"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_fiat_amount" />
-
-    <TextView
-        android:id="@+id/tv_status_error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="16dp"
-        android:textColor="@color/darkGray2"
-        android:textSize="14sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_status_error" />
+        app:layout_constraintTop_toBottomOf="@id/tv_fiat_amount"
+        tools:text="@string/lorem_ipsum" />
 
     <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_error"
+        android:id="@+id/group_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="tv_status_error, tv_status_error_message" />
+        app:constraint_referenced_ids="tv_amount, tv_fiat_amount, tv_status" />
 
-    <TextView
-        android:id="@+id/tv_status_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:paddingStart="16dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="16dp"
-        android:text="@string/wallet_balance_loading"
-        android:textColor="@color/darkGray6"
-        android:textSize="13sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_fiat_amount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
