--- a/app/src/main/res/values/strings_final.xml
+++ b/app/src/main/res/values/strings_final.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="shop_one_wallet">One Wallet</string>
+    <string name="shop_one_wallet">Tangem Wallet</string>
     <string name="shop_3_cards">3 cards</string>
     <string name="shop_2_cards">2 cards</string>
     <string name="shop_shipping">Shipping</string>
@@ -26,12 +26,13 @@
     <string name="story_backup_description">Up to 3 physical cards to one wallet</string>
     <string name="story_currencies_title">Thousands of Currencies</string>
     <string name="story_currencies_description">A hardware wallet for your Bitcoin, Ethereum and many more currencies simultaneously – all in one card</string>
-    <string name="story_web3_title">Web3 Compatible</string>
+    <string name="story_web3_title">DeFi Compatible</string>
     <string name="story_web3_description">Exchange, buy NFT’s, make loans and deposits in more than 100 different decentralized services</string>
     <string name="story_finish_title">The Wallet for Everyone</string>
     <string name="story_finish_description">Use it on the go, anywhere, anytime. No wires or batteries. Just tap the card to your phone when you need your crypto.</string>
     <string name="home_button_order">Order card</string>
+    <string name="home_button_search_tokens">Search tokens</string>
+    <string name="search_tokens_title">Search tokens</string>
     <string name="alert_demo_message">You are currently running in Demo mode. All funds are not real.</string>
-    <string name="alert_demo_feature_disabled">This feature is disabled in Demo mode.</string>
-    <string name="alert_demo_tx_send">The transaction has been successfully signed, but not sent to the blockchain because of Demo mode. </string>
+    <string name="alert_demo_feature_disabled">This feature is disabled in Demo mode</string>
 </resources>
