--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -53,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="24dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="44dp"
                 android:layout_marginEnd="36dp"
                 android:layout_weight="1"
                 app:layout_constraintBottom_toTopOf="@+id/tv_header"
@@ -109,7 +110,6 @@
                 android:id="@+id/tv_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="44dp"
                 android:layout_marginBottom="14dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/shop_one_wallet"
@@ -343,7 +343,7 @@
                     android:layout_height="48sp"
                     android:layout_marginStart="14dp"
                     android:layout_marginEnd="14dp"
-                    android:layout_marginBottom="70dp"
+                    android:layout_marginBottom="20dp"
                     android:text="@string/shop_buy_now"
                     android:textAlignment="center"
                     android:textSize="16sp" />
