--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -53,10 +53,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginStart="36dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="44dp"
                 android:layout_marginEnd="36dp"
                 android:layout_weight="1"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:paddingTop="16dp"
+                android:paddingBottom="44dp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_header"
                 app:layout_constraintTop_toTopOf="parent">
 
