--- a/app/src/main/res/values-ru/strings_final.xml
+++ b/app/src/main/res/values-ru/strings_final.xml
@@ -30,7 +30,7 @@
     <string name="story_web3_description">Обменивайте, покупайте NFT, получайте займы и делайте вклады в более чем 100 различных децентрализованных сервисах</string>
     <string name="story_finish_title">Кошелек для каждого</string>
     <string name="story_finish_description">Используйте его на ходу, в любом месте, в любое время. Без проводов и батареек. Как только понадобится крипта, просто приложите карту к телефону.</string>
-    <string name="home_button_order">Заказать карту</string>
+    <string name="home_button_order">Купить</string>
     <string name="home_button_search_tokens">Поиск токенов</string>
     <string name="search_tokens_title">Поиск токенов</string>
     <string name="alert_demo_message">Приложение работает в демонстрационном режиме. Средства на всех счетах ненастоящие.</string>
