--- a/app/src/main/res/layout/layout_wallet_details_warning.xml
+++ b/app/src/main/res/layout/layout_wallet_details_warning.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_rent_warning_title"
+            android:id="@+id/tv_warning_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_rent_warning_message"
+            android:id="@+id/tv_warning_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -39,7 +39,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_rent_warning_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_warning_title"
             tools:text="@string/solana_rent_warning" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
