--- a/app/src/main/res/values/strings_untranslated.xml
+++ b/app/src/main/res/values/strings_untranslated.xml
@@ -86,9 +86,11 @@
     <string name="custom_token_contract_address_input_title" translatable="false">Contract address</string>
     <string name="custom_token_creation_error_network_not_selected" translatable="false">Please select the network</string>
     <string name="custom_token_creation_error_empty_fields" translatable="false">Please fill in all the fields</string>
-    <string name="custom_token_creation_error_wrong_decimals" translatable="false">Decimal number is invalid</string>
+    <string name="custom_token_creation_error_wrong_decimals" translatable="false">Decimal number must be a valid integer, no higher than %d</string>
     <string name="custom_token_creation_error_invalid_contract_address" translatable="false">Contract address is invalid</string>
     <string name="custom_token_creation_error_invalid_derivation_path" translatable="false">Derivation path is invalid</string>
+    <string name="custom_token_validation_error_not_found" translatable="false">Note that tokens can be created by anyone. Be aware of adding scam tokens, they can cost nothing.</string>
+    <string name="custom_token_validation_error_already_added" translatable="false">This token/network has already been added to your list</string>
     <string name="custom_token_type_network" translatable="false">Network</string>
     <string name="custom_token_type_token" translatable="false">Token</string>
     <string name="custom_token_decimals_input_title" translatable="false">Decimals</string>
@@ -98,7 +100,9 @@
     <string name="custom_token_name_input_title" translatable="false">Name</string>
     <string name="custom_token_token_symbol_input_placeholder" translatable="false">E.g. USDC</string>
     <string name="custom_token_token_symbol_input_title" translatable="false">Token symbol</string>
-    <string name="custom_token_derivation_path_input_title" translatable="false">Derivation Path (optional)</string>
+    <string name="custom_token_derivation_path_input_title" translatable="false">BIP44 coin type</string>
+    <string name="custom_token_derivation_path_default" translatable="false">Default</string>
+    <string name="custom_token_add_token" translatable="false">Add token</string>
 
     //Details
     <string name="details_section_title_blockchain" translatable="false">Blockchain</string>
