--- a/app/src/main/res/menu/popular_tokens.xml
+++ b/app/src/main/res/menu/popular_tokens.xml
@@ -9,4 +9,11 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/menu_navigate_add_custom_token"
+        android:icon="@drawable/ic_add"
+        android:title="@string/common_add"
+        app:iconTint="@color/darkGray2"
+        app:showAsAction="always" />
+
 </menu>
