--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,8 +17,17 @@
     <color name="warning">#FFB71B</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="darkGray1">#8E8E93</color>
-    <color name="darkGray2">#636366</color>
+
+    <color name="lightGray0">#F3F3F3</color>
+    <color name="lightGray1">#F8F8FB</color>
+    <color name="lightGray2">#DADADF</color>
+    <color name="lightGray3">#D0D0D5</color>
+    <color name="lightGray4">#C7C7CC</color>
+    <color name="lightGray5">#D1D1D6</color>
+    <color name="lightGray6">#CACACC</color>
+    <color name="darkGray0">#B6B6B8</color>
+    <color name="darkGray1">#8E8E90</color>
+    <color name="darkGray2">#666668</color>
     <color name="darkGray3">#48484A</color>
     <color name="darkGray4">#3A3A3C</color>
     <color name="darkGray5">#2C2C2E</color>
@@ -36,14 +45,6 @@
 
     <color name="twins_dark">#14181D</color>
 
-
-    <color name="lightGray0">#F3F3F3</color>
-    <color name="lightGray1">#F8F8FB</color>
-    <color name="lightGray2">#DADADF</color>
-    <color name="lightGray3">#D0D0D5</color>
-    <color name="lightGray4">#C7C7CC</color>
-    <color name="lightGray5">#D1D1D6</color>
-    <color name="lightGray6">#C9C9CD</color>
 
     <color name="separatorGrey1">#1F000000</color>
     <color name="separatorGrey2">#14212121</color>
