--- a/app/src/main/res/layout/layout_warning.xml
+++ b/app/src/main/res/layout/layout_warning.xml
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="visible"
-            app:constraint_referenced_ids="btn_close, btn_can_be_better, btn_really_cool" />
+            app:constraint_referenced_ids="btn_can_be_better, btn_really_cool" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
